2012-01-20 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/bug2942343.c: disable for test-host
	* support/regression/tests/bug3475990.c: skip named address space
	  declaration for test-host

2012-01-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCnaddr.hpp:
	  Fix preprocessing step for named address spaces.

2012-01-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCnaddr.cc,
	  src/SDCCnaddr.hpp,
	  src/SDCCopt.c,
	  src/SDCCopt.h,
	  support/regression/tests/bug3475990.c:
	  Fixed bug #3475990.

2012-01-19 Borut Razem <borut.razem AT gmail.com>

	* device/lib/pic14/configure.in,device/lib/pic14/configure,
	  device/lib/pic14/Makefile.am, device/lib/pic14/Makefile.in,
	  device/lib/pic14/libm/Makefile.am,
	  device/lib/pic14/libm/Makefile.in:
	  pic14 enhanced cores enabled by default; gputils 0.14.1 or
	  newer required

2012-01-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_fsget1arg.c,
	* device/lib/_fsget2args.c: cosmetics
	* device/lib/_fsnormalize.c: fixed bug 3474855
	* support/regression/tests/bug3474855.c: new, added

2012-01-16 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fix signed comparison on gbz80.
	* device/lib/_memmove.c:
	  Fix comparison in pointer location for memmove().
	* src/z80/peeph-gbz80.def:
	  Enable some jump peepholes for gbz80.

2012-01-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix #3473876.
	* Changelog:
	  Pretend to live in the year 2012 to not cause suspicion.
	* device/lib/_memmove.c:
	  Simplified test deciding copy direction for memmove().
	* src/z80/peeph-gbz80.def:
	  Use gbz80-specific load-and-increment/decrement instructions.
	* src/z80/mappings.i:
	  Use more intuitive add sp, d syntax instead of lda sp, d(sp).

2012-01-15 Borut Razem <borut.razem AT gmail.com>

	* sdas/asrab/Makefile.in: fixed linking with -lm math library